--- a/priv/static/manifest.json
+++ b/priv/static/manifest.json
@@ -4,7 +4,14 @@
     {
       "src": "512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
+    },
+    {
+      "src": "512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
   "display": "standalone",
