--- a/priv/static/manifest.json
+++ b/priv/static/manifest.json
@@ -14,6 +14,22 @@
       "purpose": "maskable"
     }
   ],
+  "screenshots": [    
+    {
+      "src": "images/pwa_wide.png",
+      "sizes": "715x404",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Geoffrey"
+    },
+    {
+      "src": "images/pwa_portrait.png",
+      "sizes": "724x1391",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Geoffrey"
+    }
+  ],
   "display": "standalone",
   "start_url": "https://geoffrey.fly.dev"
 }
