- loading environment from file, addad solo_contact

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "debugAutoInterpretAllModules": false,
             "debugInterpretModulesPatterns": ["Auth2024*", "Auth2024Web*"],
             "exitAfterTaskReturns": false,
-            "excludeModules": [":bcrypt_elixir",]
+            "excludeModules": [":bcrypt_elixir"],
         },
     ]
 }
